--- a/_pages/old_contact.html
+++ b/_pages/old_contact.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Get in touch"
-permalink: /contact2/
+title: "Is this working?"
+permalink: /oldcontact/
 author_profile: true
 ---
 
