--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ Sadeghi, M., <strong>Sheahan, HR.*</strong>, Ingram, JN., & Wolpert, DM. (2019),
 For a more recent update, you can find my papers on my Google Scholar profile.</p>
 
 <h2 id="contact">Contact</h2>
-<p><a href="https://github.com/hannahsheahan"> <img src="assets/github.svg" height="15px" /> <span class="username">hannahsheahan</span></a><br />
+<p><img src="assets/location.svg" height="16px" /> London, UK</p>
+<a href="https://github.com/hannahsheahan"> <img src="assets/github.svg" height="15px" /> <span class="username">hannahsheahan</span></a><br />
 <a href="https://twitter.com/hannahsheahan"> <img src="assets/twitter.svg" height="16px" /> <span class="username">hannahsheahan</span></a></p>
+<a href="https://scholar.google.co.uk/citations?user=tM4sf80AAAAJ&hl=en"> <img src="assets/google-scholar.svg" height="16px" /> <span class="username">Google Scholar</span></a></p>
 <p><a class="u-email" href="mailto:hsheahan@deepmind.com">hsheahan@deepmind.com</a> <br />
 </div>
 
