--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <a href="https://github.com/hannahsheahan"> <img src="assets/github.svg" height="15px" /> <span class="username">hannahsheahan</span></a><br />
 <a href="https://twitter.com/hannahsheahan"> <img src="assets/twitter.svg" height="16px" /> <span class="username">hannahsheahan</span></a><br />
 <a href="https://scholar.google.co.uk/citations?user=tM4sf80AAAAJ&hl=en"> <img src="assets/google-scholar.svg" height="16px" /> <span class="username">Google Scholar</span></a><br />
-<a class="u-email" href="mailto:hsheahan@deepmind.com">hsheahan@deepmind.com</a></p>
+<a <img src="assets/email.svg" height="15px" /> <span class="u-email" href="mailto:hsheahan@deepmind.com">hsheahan@deepmind.com</span></a></p>
 </div>
 
       </div>
