remove unnecessary asterisks

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
 
 <p>Bakker, M.*, Chadwick, M.*, <strong>Sheahan, H.*</strong>, Tessler, MH., Campbell-Gillingham L., Balaguer, J., McAleese, N., Glaese, A., Aslanides J., Botvinick M., Summerfield. C. (2022), <a href="https://arxiv.org/abs/2211.15006">Fine-tuning language models to find agreement among humans with diverse preferences.</a> <em>NeurIPS</em>. <br /></p>
 
-<p>Bondi, L., Koster, R., <strong>Sheahan, H.*</strong>, Chadwick, M., Bachrach, Y., Cemgil, T., Paquet U., Dvijotham, K. (2022), <a href="https://ojs.aaai.org/index.php/AAAI/article/view/20465">Role of human-ai interaction in selective prediction.</a> <em>AAAI</em>. 36(5) <br />
+<p>Bondi, L., Koster, R., <strong>Sheahan, H.</strong>, Chadwick, M., Bachrach, Y., Cemgil, T., Paquet U., Dvijotham, K. (2022), <a href="https://ojs.aaai.org/index.php/AAAI/article/view/20465">Role of human-ai interaction in selective prediction.</a> <em>AAAI</em>. 36(5) <br />
 
-<p>Hawthorne, C., Jaegle, A., Cangea, C., Borgeaud, S., Nash, C., Malinowski, M., Dieleman, S., Vinyals, O., Botvinick, M., Simon, I., <strong>Sheahan, H.*</strong>, Zeghidour, N., Alayrac, JB., Carreira, J., & Engel. J. (2022), <a href="https://arxiv.org/abs/2202.07765">General-purpose, long-context autoregressive modeling with perceiver ar.</a> <em>ICML</em>. <br /></p>
+<p>Hawthorne, C., Jaegle, A., Cangea, C., Borgeaud, S., Nash, C., Malinowski, M., Dieleman, S., Vinyals, O., Botvinick, M., Simon, I., <strong>Sheahan, H.</strong>, Zeghidour, N., Alayrac, JB., Carreira, J., & Engel. J. (2022), <a href="https://arxiv.org/abs/2202.07765">General-purpose, long-context autoregressive modeling with perceiver ar.</a> <em>ICML</em>. <br /></p>
 
 <p><strong>Sheahan, H.*</strong>, Luyckx, F.*, Nelli, S., Teupe, C., & Summerfield C. (2021), <a href="https://www.sciencedirect.com/science/article/pii/S0896627321000787">Neural state space alignment for magnitude generalization in humans and recurrent networks.</a> <em>Neuron</em>. 109 (7), 1214-1226<br /></p>
 
-<p>Albert, S., Jang, J., <strong>Sheahan, HR.*</strong>, Teunissen, L., Vandevoorde, K., & Shadmehr, R. (2021), <a href="https://www.nature.com/articles/s41562-020-01036-x">An implicit memory of errors limits human sensorimotor adaptation.</a> <em>Nature Human Behaviour</em>.<br /></p>
+<p>Albert, S., Jang, J., <strong>Sheahan, HR.</strong>, Teunissen, L., Vandevoorde, K., & Shadmehr, R. (2021), <a href="https://www.nature.com/articles/s41562-020-01036-x">An implicit memory of errors limits human sensorimotor adaptation.</a> <em>Nature Human Behaviour</em>.<br /></p>
 
-<p>Summerfield, C., Luyckx, F., & <strong>Sheahan, H.*</strong> (2020), <a href="https://pubmed.ncbi.nlm.nih.gov/31669186/">Structure learning and the posterior parietal cortex.</a> <em>Progress in Neurobiology</em>. 184 <br /></p>
+<p>Summerfield, C., Luyckx, F., & <strong>Sheahan, H.</strong> (2020), <a href="https://pubmed.ncbi.nlm.nih.gov/31669186/">Structure learning and the posterior parietal cortex.</a> <em>Progress in Neurobiology</em>. 184 <br /></p>
 
-<p>Sadeghi, M., <strong>Sheahan, HR.*</strong>, Ingram, JN., & Wolpert, DM. (2019), <a href="https://www.nature.com/articles/s41598-019-39507-5">The visual geometry of a tool modulates generalization during adaptation.</a> <em>Scientific Reports</em>. 9, (2731)<br /></p>
+<p>Sadeghi, M., <strong>Sheahan, HR.</strong>, Ingram, JN., & Wolpert, DM. (2019), <a href="https://www.nature.com/articles/s41598-019-39507-5">The visual geometry of a tool modulates generalization during adaptation.</a> <em>Scientific Reports</em>. 9, (2731)<br /></p>
 
-<p><strong>Sheahan, HR.*</strong>, Ingram, JN., Zalalyte, GM. & Wolpert, DM. (2018), <a href="https://www.nature.com/articles/s41598-018-32606-9">Imagery of movements immediately following performance allows learning of motor skills that interfere.</a> <em>Scientific Reports</em>. 8 (14330)<br /></p>
+<p><strong>Sheahan, HR.</strong>, Ingram, JN., Zalalyte, GM. & Wolpert, DM. (2018), <a href="https://www.nature.com/articles/s41598-018-32606-9">Imagery of movements immediately following performance allows learning of motor skills that interfere.</a> <em>Scientific Reports</em>. 8 (14330)<br /></p>
 
-<p><strong>Sheahan, HR.*</strong>, Franklin, DW. & Wolpert, DM. (2016), <a href="https://pubmed.ncbi.nlm.nih.gov/27817979/">Motor Planning, Not Execution, Separates Motor Memories.</a> <em>Neuron</em>. 92 (4), 773-779 <br /></p>
+<p><strong>Sheahan, HR.</strong>, Franklin, DW. & Wolpert, DM. (2016), <a href="https://pubmed.ncbi.nlm.nih.gov/27817979/">Motor Planning, Not Execution, Separates Motor Memories.</a> <em>Neuron</em>. 92 (4), 773-779 <br /></p>
 
 <p>For a more recent update, you can find my papers on my Google Scholar profile.</p>
 
