--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1 id="hannah-sheahan">Hannah Sheahan</h1> <br />
 
 <img src="assets/profile.png" height="200px" style="padding: 0 15px; float: left;"/>
-<p>I am a Research Engineer at <a href="https://deepmind.com/">Google DeepMind</a>. I work on human-AI interaction in large language models.</p>
+<p>I am an AI researcher at OpenAI, focused on building safe and capable models from data. Before OpenAI, I was a Research Engineer at <a href="https://deepmind.com/">Google DeepMind</a> where I worked on human-AI interaction in LLMs and helped to build <a href="https://deepmind.google/technologies/gemini/">Gemini</a>. </p>
 
 <p>Before switching to AI research, I researched human learning. I did my PhD at The University of Cambridge in the <a href="http://learning.eng.cam.ac.uk/Public/">Computational & Biological Learning Lab</a>, supervised by <a href="https://scholar.google.com/citations?user=YM8BRlUAAAAJ&hl=en">Daniel Wolpert</a>, and a postdoc at The University of Oxford with <a href="https://scholar.google.com/citations?user=ymlcN9AAAAAJ&hl=en">Chris Summerfield</a>.</p>
 
