--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
 <h2 id="publications">Publications</h2>
 
+<p>Gemini team (2024), <a href="https://arxiv.org/pdf/2403.05530">Gemini 1.5: Unlocking multimodal understanding across millions of tokens of context.</a> <em>ArXiv</em><br /></p>
+
+<p>Thompson, J, <strong>Sheahan, H.</strong>, Dumbalska, T., Sandbrink, J., Piazza, M., Summerfield, C. (2024), <a href="https://arxiv.org/pdf/2405.09953">Zero-shot counting with a dual-stream neural network model.</a> <em>ArXiv</em><br /></p>
+
+<p>Gemini team (2023), <a href="https://arxiv.org/pdf/2312.11805">Gemini: a family of highly capable multimodal models.</a> <em>ArXiv</em><br /></p>
+
 <p>Muhle-Karbe, P.*, <strong>Sheahan, H.*</strong>, Pezzulo, G., Spiers, H., Chien, S., Schuck, NW.*, Summerfield C.* (2023), <a href="https://www.biorxiv.org/content/10.1101/2023.01.12.523762v1">Goal-seeking compresses neural codes for space in the human hippocampus and orbitofrontal cortex.</a> <em>Neuron</em><br /></p>
 
 <p>Bakker, M.*, Chadwick, M.*, <strong>Sheahan, H.*</strong>, Tessler, MH., Campbell-Gillingham L., Balaguer, J., McAleese, N., Glaese, A., Aslanides J., Botvinick M., Summerfield. C. (2022), <a href="https://arxiv.org/abs/2211.15006">Fine-tuning language models to find agreement among humans with diverse preferences.</a> <em>NeurIPS</em>. <br /></p>
