--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
 <p>Muhle-Karbe, P.*, <strong>Sheahan, H.*</strong>, Pezzulo, G., Spiers, H., Chien, S., Schuck, NW.*, Summerfield C.* (2023), <a href="https://www.biorxiv.org/content/10.1101/2023.01.12.523762v1">Goal-seeking compresses neural codes for space in the human hippocampus and orbitofrontal cortex.</a> <em>Neuron</em><br /></p>
 
+<p>Dasgupta, I.*, Lampinen, A.*, Chan, S., <strong>Sheahan, H.</strong>, Creswell, A., Kumaran, D., McClelland, J., Hill, F. (2023), <a href="https://web.stanford.edu/~jlmcc/papers/DasguptaLampinenEtAl22LMsShowHumanLikeContentEffectsInReasoning.pdf">Language models show human-like content effects on reasoning.</a> <em>ArXiv</em><br /></p>
+
 <p>Bakker, M.*, Chadwick, M.*, <strong>Sheahan, H.*</strong>, Tessler, MH., Campbell-Gillingham L., Balaguer, J., McAleese, N., Glaese, A., Aslanides J., Botvinick M., Summerfield. C. (2022), <a href="https://arxiv.org/abs/2211.15006">Fine-tuning language models to find agreement among humans with diverse preferences.</a> <em>NeurIPS</em>. <br /></p>
 
 <p>Bondi, L., Koster, R., <strong>Sheahan, H.</strong>, Chadwick, M., Bachrach, Y., Cemgil, T., Paquet U., Dvijotham, K. (2022), <a href="https://ojs.aaai.org/index.php/AAAI/article/view/20465">Role of human-ai interaction in selective prediction.</a> <em>AAAI</em>. 36(5) <br />
