--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                 <h1 id="hannah-sheahan">Hannah Sheahan</h1>
                 <img src="assets/profile.png" alt="Hannah Sheahan" class="profile-pic" />
 
+                <p>Thompson, J, <strong>Sheahan, H.</strong>, Dumbalska, T., Sandbrink, J., Piazza, M., Summerfield, C. (2024), <a href="https://arxiv.org/pdf/2405.09953">Zero-shot counting with a dual-stream neural network model.</a> <em>ArXiv</em><br /></p>
+                
                 <p>I am an AI researcher at OpenAI, focused on building safe and capable models from data. Before OpenAI, I was a Research Engineer at <a href="https://deepmind.com/">Google DeepMind</a> where I worked on human-AI interaction in LLMs and helped to build <a href="https://deepmind.google/technologies/gemini/">Gemini</a>.</p>
 
                 <p>Before switching to AI research, I researched human learning. I did my PhD at The University of Cambridge in the <a href="http://learning.eng.cam.ac.uk/Public/">Computational & Biological Learning Lab</a>, supervised by <a href="https://scholar.google.com/citations?user=YM8BRlUAAAAJ&hl=en">Daniel Wolpert</a>, and a postdoc at The University of Oxford with <a href="https://scholar.google.com/citations?user=ymlcN9AAAAAJ&hl=en">Chris Summerfield</a>.</p>
