--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             height: 150px;
             object-fit: cover;
             border: 4px solid #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */ /* Remove this line */
         }
 
         p {
