--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <h1>Hannah Sheahan</h1>
 
     <p>I am an AI alignment researcher at <a href="https://openai.com/">OpenAI</a>. I try to build smart models
-       that don't do bad things. Before OpenAI, I worked at <a href="https://deepmind.google/">DeepMind</a>
+       that don't do bad things. Before OpenAI, I was a researcher at <a href="https://deepmind.google/">DeepMind</a>
        where I helped to build <a href="https://deepmind.google/technologies/gemini/">Gemini</a>.</p>
 
     <p>Before that, I researched human learning. I did my PhD at The University of Cambridge with 
