--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         --text: #111;
         --subtle: #6e6e73;
         --link: #0071e3;
-        --max-width: 780px;
-        --radius: 18px;
+        --max-width: 900px;
     }
 
     * {
@@ -29,53 +28,42 @@
         -webkit-font-smoothing: antialiased;
     }
 
-    .hero-container {
-        width: 100%;
-        height: 60vh;
-        max-height: 540px;
-        overflow: hidden;
-        position: relative;
-        background: #000;
-    }
-
-    .hero-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-        opacity: 0.96;
-        filter: grayscale(10%) contrast(1.05);
-        mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
-        -webkit-mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
-    }
-
-    .wrapper {
+    .container {
         max-width: var(--max-width);
         margin: 0 auto;
         padding: 60px 24px;
+        display: flex;
+        gap: 40px;
+        align-items: flex-start;
+    }
+
+    @media (max-width: 760px) {
+        .container {
+            flex-direction: column;
+            text-align: center;
+            align-items: center;
+        }
+    }
+
+    .profile-pic {
+        width: 260px;
+        max-width: 90vw;
+        border-radius: 14px;
+        object-fit: cover;
+        filter: grayscale(15%);
+        box-shadow: 0 4px 14px rgba(0,0,0,0.12);
     }
 
     h1 {
         font-size: 42px;
         font-weight: 600;
-        margin-bottom: 24px;
-        text-align: center;
+        margin-bottom: 26px;
     }
 
     p {
         font-size: 18px;
-        margin-bottom: 22px;
+        margin-bottom: 20px;
         color: var(--subtle);
-    }
-
-    h2 {
-        font-size: 24px;
-        font-weight: 600;
-        margin-top: 50px;
-        margin-bottom: 18px;
-        border-bottom: 1px solid #e5e5e5;
-        padding-bottom: 8px;
-        color: #000;
     }
 
     a {
@@ -83,9 +71,16 @@
         text-decoration: none;
         font-weight: 500;
     }
+    a:hover { text-decoration: underline; }
 
-    a:hover {
-        text-decoration: underline;
+    h2 {
+        font-size: 24px;
+        font-weight: 600;
+        margin-top: 40px;
+        margin-bottom: 14px;
+        border-bottom: 1px solid #eaeaea;
+        padding-bottom: 6px;
+        color: #000;
     }
 
     .contact-info p {
@@ -104,36 +99,38 @@
 
 <body>
 
-<!-- Hero image -->
-<div class="hero-container">
-    <img src="assets/profile.jpg" alt="Hannah Sheahan" class="hero-image">
-</div>
+<div class="container">
+    
+    <!-- Text -->
+    <div class="text">
+        <h1>Hannah Sheahan</h1>
 
-<div class="wrapper">
-    <h1>Hannah Sheahan</h1>
+        <p>I am an AI alignment researcher at <a href="https://openai.com/">OpenAI</a>. I try to build smart models
+           that don't do bad things. Before OpenAI, I worked at 
+           <a href="https://deepmind.google/">DeepMind</a> where I helped to build 
+           <a href="https://deepmind.google/technologies/gemini/">Gemini</a>.</p>
 
-    <p>I am an AI alignment researcher at <a href="https://openai.com/">OpenAI</a>. I try to build smart models
-       that don't do bad things. Before OpenAI, I was a researcher at <a href="https://deepmind.google/">DeepMind</a>
-       where I helped to build <a href="https://deepmind.google/technologies/gemini/">Gemini</a>.</p>
+        <p>Before that, I researched human learning. I did my PhD at The University of Cambridge with 
+           <a href="https://scholar.google.com/citations?user=YM8BRlUAAAAJ&hl=en">Daniel Wolpert</a>, 
+           and a postdoc at The University of Oxford with 
+           <a href="https://scholar.google.com/citations?user=ymlcN9AAAAAJ&hl=en">Chris Summerfield</a>. 
+           I don't publish much lately, but you can check out some old papers 
+           <a href="https://scholar.google.com/citations?user=tM4sf80AAAAJ&hl=en">here</a>.</p>
 
-    <p>Before that, I researched human learning. I did my PhD at The University of Cambridge with 
-       <a href="https://scholar.google.com/citations?user=YM8BRlUAAAAJ&hl=en">Daniel Wolpert</a>, and a postdoc at
-       The University of Oxford with 
-       <a href="https://scholar.google.com/citations?user=ymlcN9AAAAAJ&hl=en">Chris Summerfield</a>. 
-       I don't publish much atm, but you can read old papers
-       <a href="https://scholar.google.com/citations?user=tM4sf80AAAAJ&hl=en">here</a>.
-    </p>
-
-    <h2>Contact</h2>
-    <div class="contact-info">
-        <p><img src="assets/location.svg" class="icon">San Francisco, US</p>
-        <p><a href="https://twitter.com/hannahsheahan">
-            <img src="assets/twitter.svg" class="icon">Twitter
-        </a></p>
-        <p><a href="https://scholar.google.com/citations?user=tM4sf80AAAAJ&hl=en">
-            <img src="assets/google-scholar.svg" class="icon">Google Scholar
-        </a></p>
+        <div class="contact-info">
+            <p><img src="assets/location.svg" class="icon">San Francisco, US</p>
+            <p><a href="https://twitter.com/hannahsheahan">
+                <img src="assets/twitter.svg" class="icon">Twitter
+            </a></p>
+            <p><a href="https://scholar.google.com/citations?user=tM4sf80AAAAJ&hl=en">
+                <img src="assets/google-scholar.svg" class="icon">Google Scholar
+            </a></p>
+        </div>
     </div>
+
+    <!-- Portrait -->
+    <img src="assets/hero_photo.jpg" alt="Hannah Sheahan" class="profile-pic">
+
 </div>
 
 </body>
