--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <!-- Portrait -->
-    <img src="assets/hero_photo.jpg" alt="Hannah Sheahan" class="profile-pic">
+    <img src="assets/profile.jpg" alt="Hannah Sheahan" class="profile-pic">
 
 </div>
 
