--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h1>Hannah Sheahan</h1>
 
         <p>I am an AI alignment researcher at <a href="https://openai.com/">OpenAI</a>. I try to build smart models
-           that don't do bad things. Before OpenAI, I worked at 
+           that don't do bad things. Before OpenAI, I was a researcher at 
            <a href="https://deepmind.google/">DeepMind</a> where I helped to build 
            <a href="https://deepmind.google/technologies/gemini/">Gemini</a>.</p>
 
@@ -114,7 +114,7 @@
            <a href="https://scholar.google.com/citations?user=YM8BRlUAAAAJ&hl=en">Daniel Wolpert</a>, 
            and a postdoc at The University of Oxford with 
            <a href="https://scholar.google.com/citations?user=ymlcN9AAAAAJ&hl=en">Chris Summerfield</a>. 
-           I don't publish much lately, but you can check out some old papers 
+           I don't publish much atm, but you can check out some old papers 
            <a href="https://scholar.google.com/citations?user=tM4sf80AAAAJ&hl=en">here</a>.</p>
 
         <div class="contact-info">
