--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     }
 
     .profile-pic {
-        width: 260px;
-        max-width: 90vw;
+        width: 200px; /* Smaller portrait */
+        max-width: 70vw;
         border-radius: 14px;
         object-fit: cover;
         filter: grayscale(15%);
@@ -71,6 +71,7 @@
         text-decoration: none;
         font-weight: 500;
     }
+
     a:hover { text-decoration: underline; }
 
     h2 {
